        - Calling the getter $rsrc->from("argument") now throws an exception
          instead of silently discarding the argument

    * New Features
        - When using non-scalars (e.g. arrays) as literal bind values it is no
          longer necessary to explicitly specify a bindtype (this turned out
          to be a mostly useless overprotection)
        - DBIx::Class::Optional::Dependencies now properly understands
          combinations of requirements and does the right thing with e.g.
          ->req_list_for([qw( rdbms_oracle ic_dt )]) bringing in the Oracle
          specific DateTime::Format dependencies

    * Fixes
        - Ensure failing on_connect* / on_disconnect* are dealt with properly,
          notably on_connect* failures now properly abort the entire connect
        - Fix incorrect SQL generated with invalid {rows} on complex resultset
          operations, generally more robust handling of rows/offset attrs
        - Fix incorrect $storage state on unexpected RDBMS disconnects and
          other failure events, preventing clean reconnection (RT#110429)
        - Ensure leaving an exception stack via Return::MultiLevel or something
          similar produces a large warning
        - Make sure exception objects stringifying to '' are properly handled
          and warned about (GH#15)
        - Fix silencing of exceptions thrown by custom inflate_result() methods
        - Fix complex prefetch when ordering over foreign boolean columns
          ( Pg can't MAX(boolcol) despite being able to ORDER BY boolcol )
        - Fix incorrect data returned in a corner case of partial-select HRI
          invocation (no known manifestations of this bug in the field, see
          commit message for description of exact failure scenario)
        - Fix corner case of stringify-only overloaded objects being used in
          create()/populate()
        - Remove spurious exception warping in ::Replicated::execute_reliably
          (RT#113339)