@@ -11,7 +11,9 @@ __PACKAGE__->table('event');
 
 __PACKAGE__->add_columns(
   id => { data_type => 'integer', is_auto_increment => 1 },
-  starts_at => { data_type => 'datetime', extra => { timezone => "America/Chicago", locale => 'de_DE' } },
+  starts_at => { data_type => 'datetime', extra => { time_zone => "America/Chicago", locale => 'de_DE' } },
+
+  # DO NOT change 'timezone' - there to test the legacy syntax
   created_on => { data_type => 'timestamp', extra => { timezone => "America/Chicago", floating_tz_ok => 1 } },
 );
 
