@@ -34,6 +34,8 @@ Revision history for DBIx::Class
         - When using non-scalars (e.g. arrays) as literal bind values it is no
           longer necessary to explicitly specify a bindtype (this turned out
           to be a mostly useless overprotection)
+        - InflateColumn::DateTime now accepts the ecosystem-standard option
+          'time_zone', in addition to the DBIC-only 'timezone' (GH#28)
         - DBIx::Class::Optional::Dependencies now properly understands
           combinations of requirements and does the right thing with e.g.
           ->req_list_for([qw( rdbms_oracle ic_dt )]) bringing in the Oracle
